docs/7.52/md/abenrfc_intro_oview.md
---
title: "RFC Overview"
description: |
  The following sections are short introductions to RFC topics. For more information, see the RFC documentation on the SAP Help Portal. -   Introduction to RFC(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_intro.htm) -   RFC Interface(https://help.sap.com/doc/abapdocu_752_inde
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_intro_oview.htm"
abapFile: "abenrfc_intro_oview.htm"
keywords: ["do", "data", "abenrfc", "intro", "oview"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [RFC - Remote Function Call](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc.htm) → 

RFC Overview

The following sections are short introductions to RFC topics. For more information, see the RFC documentation on the SAP Help Portal.

-   [Introduction to RFC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_intro.htm)

-   [RFC Interface](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_interface.htm)

-   [RFC Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_statements.htm)

-   [RFC Destination](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_destination.htm)

-   [RFC-Sitzung](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_context.htm)

-   [RFC Protocol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_protocol.htm)

-   [RFC Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_exception.htm)

-   [RFC System Fields](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_system_fields.htm)

-   [RFC Authorizations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_authority.htm)

-   [RFC Trust Relationships](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensmt1_2.htm)

-   [RFC Dialog Interactions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_dialog.htm)

-   [RFC Restrictions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_limitations.htm)

Continue
[Introduction to RFC](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_intro.htm)
[RFC Interface](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_interface.htm)
[RFC Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_statements.htm)
[RFC Destination](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_destination.htm)
[RFC Session](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_context.htm)
[RFC Protocol](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_protocol.htm)
[RFC Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_exception.htm)
[RFC System Fields](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_system_fields.htm)
[RFC Authorizations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_authority.htm)
[RFC Trust Relationships](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensmt1_2.htm)
[RFC Dialog Interactions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_dialog.htm)
[RFC Restrictions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrfc_limitations.htm)