docs/7.57/md/abenrfc_intro_oview.md
---
title: "RFC - Overview"
description: |
  The following sections are short introductions to RFC topics. For more information, see the RFC documentation on the SAP Help Portal. -   Introduction to RFC(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_intro.htm) -   RFC Interface(https://help.sap.com/doc/abapdocu_757_inde
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_intro_oview.htm"
abapFile: "abenrfc_intro_oview.htm"
keywords: ["do", "if", "data", "abenrfc", "intro", "oview"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [Remote Function Call (RFC)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: RFC - Overview, ABENRFC_INTRO_OVIEW, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASug
gestion for improvement:)

RFC - Overview

The following sections are short introductions to RFC topics. For more information, see the RFC documentation on the SAP Help Portal.

-   [Introduction to RFC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_intro.htm)
-   [RFC Interface](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_interface.htm)
-   [RFC Calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_statements.htm)
-   [RFC Destination](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_destination.htm)
-   [RFC Session](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_context.htm)
-   [RFC Protocol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_protocol.htm)
-   [RFC Exceptions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_exception.htm)
-   [RFC System Fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_system_fields.htm)
-   [RFC Authorizations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_authority.htm)
-   [RFC Trust Relationships](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensmt1_2.htm)
-   [RFC Dialog Interactions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_dialog.htm)
-   [RFC Restrictions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_limitations.htm)

Continue
[RFC - Introduction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_intro.htm)
[RFC - Interface](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_interface.htm)
[RFC - Calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_statements.htm)
[RFC - Destination](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_destination.htm)
[RFC - Session](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_context.htm)
[RFC - Protocol](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_protocol.htm)
[RFC - Exceptions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_exception.htm)
[RFC - System Fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_system_fields.htm)
[RFC - Authorizations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_authority.htm)
[RFC - Trust Relationships](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensmt1_2.htm)
[RFC - Dialog Interactions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_dialog.htm)
[RFC - Restrictions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_limitations.htm)